<resources>
    <string name="app_name">Earning Ethics</string>
    <string name="main_qute">"Earning Ethics  Welcome Page"</string>
    <string name="aboutraj">We’ve been helping brands develop and define their voice since
        2021. The times may have changed, but our love for creativity and problem-solving
        hasn\'t. We’re driven by technology and innovation to ensure we fulfill our
        key mission of helping our clients find their successful future. Get in touch so that
        we can kickstart your branding today.
        Mr. Raj Singh Vishain is CEO &amp; FOUNDER of EARNING
        ETHICS. He is a Writer, Motivator, A Digital Marketer, Graphic Designer,
        Content Creator And A Young Future Entrepreneur. He is From Dhanbad, Jharkhand, India.
        He is currently Studying Business Administration From Mittal School Of Business.s</string>
    <string name="para1">Earning Ethics is a Social Media Agency Founded By Mr. Raj Singh
        Vishain Of Dhanbad, Jharkhand, India. The Agency Provides Various Digital Marketing
        Services Like Social Media Management, Social Media Strategy, Graphic Designing
        (Infographics), Social Media Marketing, Content Marketing, Search Engine Optimization,
        Including Facebook and Instagram Marketing.
        The Agency Also Trains Youngsters Who Want To Enhance Their Skill In The Field Of Digital Marketing.</string>

    <string name="para2">At Earning Ethics we help you define and sharpen your vision and
        then help you bring it to life in a way that connects emotionally with your audience.
        Founded in 2023, our one-stop Digital Marketing Agency helps bring brands into the spotlight.</string>
    <string name="para3">We’re passionate about helping you find your creative voice. We guide
        our clients through the minefields of modern business, helping them thrive in a fast-changing world.
        In so doing, we leverage each company’s unique
        strengths to build a personalized roadmap to success. Talk to us about what we can do for you.</string>
    <string name="our_story">Our Story</string>
    <string name="raj_singh_vishain">Raj Singh Vishain</string>
    <string name="get_to_know_us">Get to Know Us</string>

</resources>